fix mathjax overflow

--- a/Test/testjson/css/style.css
+++ b/Test/testjson/css/style.css
@@ -155,6 +155,10 @@ margin-top: 3%; margin-bottom: 3%;
 	/*padding-bottom: 1%;*/
 }
 
+.mathjax {
+	overflow: auto;
+}
+
 
 
 
